plays show as card on playbook page

--- a/pigue.ui/src/styles/index.scss
+++ b/pigue.ui/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'variables';
-@import '~bootstrap/dist/css/bootstrap.min.css';
+// @import 'variables';
+ @import '~bootstrap/dist/css/bootstrap.min.css';
 
 
