--- a/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
+++ b/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
@@ -4,7 +4,8 @@
   border-radius: 25px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.8);
   padding: 40px 0;
-  background-color: red;
+  // background-color: red;
+  background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/playwrist.png');
 }
 
 .PlayForm{
