--- a/pigue.ui/src/components/pages/Playbook/Playbook.scss
+++ b/pigue.ui/src/components/pages/Playbook/Playbook.scss
@@ -2,4 +2,8 @@
 display: flex;
 flex-direction: row;
 flex-wrap: wrap;
+background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/IMG_2683.jpg');
+background-repeat: no-repeat repeat;
+background-size: cover;
+background-attachment: fixed;
 }
