--- a/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
+++ b/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
@@ -1,11 +1,14 @@
 .play-details{
-  height: 450px;
-  width: 70%;
+  height: 750px;
+  width: 950px;
   border-radius: 25px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.8);
   padding: 40px 0;
   // background-color: red;
-  background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/playwrist.png');
+  background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/Wall+Poster+4.jpg');
+  background-repeat: no-repeat repeat;
+background-size: cover;
+background-attachment: fixed;
 }
 
 .PlayForm{
@@ -23,3 +26,20 @@ background-attachment: fixed;
 .form-control{
     width: 50%;
 }
+
+#play-name{
+background-color:rgb(11, 11, 197);
+color:red;
+}
+
+#play-type{
+  background-color:rgb(11, 11, 197);
+  color:red;
+  }
+
+  #formation-name{
+    background-color:rgb(11, 11, 197);
+    color:red;
+    }
+
+    
