--- a/pigue.ui/src/components/shared/PlayerCard/PlayerCard.scss
+++ b/pigue.ui/src/components/shared/PlayerCard/PlayerCard.scss
@@ -1,10 +1,19 @@
 .PlayerCard{
     width: 350px;
-    height: 250px;
+    height: 450px;
     margin: 25px;
-    background-color: lightgray;
-    color:black;
+    // background-color: lightgray;
+    background-color: #ee830a;
+    color:#0011ff;
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
     transition: 0.4s;
+    border: solid #0011ff;
     }
+
+    .topps{
+        width: 250px;
+        height: 250px;
+        border-radius: 25px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
+      }
