--- a/pigue.ui/src/components/pages/Huddle/Huddle.scss
+++ b/pigue.ui/src/components/pages/Huddle/Huddle.scss
@@ -19,3 +19,13 @@ margin: 10px;
     color:#0011ff;
     background-color:#ee830a;
 }
+
+.gametime{
+   color:#0011ff;
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+.btn:hover{
+    background-color:#0011ff;
+}
