--- a/pigue.ui/src/components/shared/PlayerCard/PlayerCard.scss
+++ b/pigue.ui/src/components/shared/PlayerCard/PlayerCard.scss
@@ -9,6 +9,10 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
     transition: 0.4s;
     border: solid #0011ff;
+    // display:flex;
+    // flex-direction: row;
+    // flex-wrap: wrap;
+    // align-items: flex-start;
     }
 
     .topps{
