--- a/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
+++ b/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
@@ -1,13 +1,25 @@
 .SinglePlayView{
   display: flex;
-  justify-content: center;
-  width: 350px;
-  height: 300px;
+  flex-direction: row;
+  justify-content: space-around;
   margin: 25px;
-  background-color: lightgray;
-  color:black;
-  border-radius: 25px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
-  transition: 0.4s;
   }
   
+  .play1{
+    text-align: center;
+  }
+
+  .btn{
+    align-content: center;
+  }
+  
+  .spinner-border{
+    background-color:#ee830a;
+
+  }
+
+  .PlayerCard{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  }
