--- a/pigue.ui/src/components/shared/Navbar/Navbar.scss
+++ b/pigue.ui/src/components/shared/Navbar/Navbar.scss
@@ -1,3 +1,19 @@
 .navbar{
     color:black;
+    background-color: black;
+    height: 90px;
+}
+
+// .nav-item{
+//     align-items: flex-end;
+// } 
+
+.nav-link{
+    color:white;
+    font-size: x-large;
+    font-weight: bolder;
+}
+
+.nav-link:hover{
+    color:#0011ff;
 }
