--- a/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
+++ b/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
@@ -18,8 +18,8 @@
 
   }
 
-  .PlayerCard{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  }
+  // .PlayerCard{
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: space-around;
+  // }
