--- a/pigue.ui/src/components/shared/PlayerCard/PlayerCard.scss
+++ b/pigue.ui/src/components/shared/PlayerCard/PlayerCard.scss
@@ -1,10 +1,10 @@
 .PlayerCard{
     width: 350px;
-    height: 450px;
+    height: 550px;
     margin: 25px;
     // background-color: lightgray;
-    background-color: #ee830a;
-    color:#0011ff;
+    color: #ee830a;
+    background-color:#0011ff;
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
     transition: 0.4s;
@@ -17,7 +17,8 @@
 
     .topps{
         width: 250px;
-        height: 250px;
+        height: 300px;
         border-radius: 25px;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.6);
+        margin: 15px;
       }
