--- a/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
+++ b/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
@@ -1,16 +1,17 @@
 .play-details{
-  height: 750px;
-  width: 950px;
+  height: 450px;
+  width: 550px;
   border-radius: 25px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.8);
   padding: 40px 0;
   // background-color: red;
-  background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/Wall+Poster+4.jpg');
-  background-repeat: no-repeat repeat;
+// background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/Wall+Poster+4.jpg');
+background-repeat: repeat;
 background-size: cover;
 background-attachment: fixed;
 color:#ee830a;
-padding-left: 15px;
+// padding-left: 15px;
+text-align: center;
 }
 
 .PlayForm{
@@ -19,22 +20,28 @@ justify-content: center;
 padding:65px;
 height: 100vh;
 background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/648f10ecf0160727277ac83e3c40826f.jpg');
-background-repeat: no-repeat;
+background-repeat: no-repeat repeat;
 background-size: cover;
 background-attachment: fixed;
 
 }
 
 .form-control{
-    width: 50%;
+    align-self: center;;
 }
 
 #play-name, #play-type, #formation-name{
   color:black;
+  text-align: center;
 }
 
 .attheline{
-  color:#0011ff;
+  color:black;
+  text-align: center;
 }
 
-    
+.saveplay,.cancel{
+  background-color: black;
+  color:white;
+}
+
