add play form drop run or pass

--- a/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
+++ b/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
@@ -27,3 +27,14 @@
   // .single{
   //   justify-content: center;
   // }
+
+  .PlayBackGround{
+    background-color: #0011ff;
+    width: 25%;
+    margin: 5px;
+    opacity: 85%;
+    border-radius: 25px;
+   
+  
+
+  }
