--- a/pigue.ui/src/components/pages/Playbook/Playbook.scss
+++ b/pigue.ui/src/components/pages/Playbook/Playbook.scss
@@ -1,6 +1,7 @@
 .Playbook{
 display: flex;
 flex-direction: row;
+justify-content: center;
 flex-wrap: wrap;
 background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/IMG_2683.jpg');
 background-repeat: no-repeat;
