add newform and plays, players, formations

--- a/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
+++ b/pigue.ui/src/components/pages/AddPlayForm/AddPlayForm.scss
@@ -19,7 +19,7 @@ display: flex;
 justify-content: center;
 padding:65px;
 height: 100vh;
-background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/648f10ecf0160727277ac83e3c40826f.jpg');
+// background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/648f10ecf0160727277ac83e3c40826f.jpg');
 background-repeat: no-repeat repeat;
 background-size: cover;
 background-attachment: fixed;
