fixed navbar and home page

--- a/pigue.ui/src/components/pages/Home/Home.scss
+++ b/pigue.ui/src/components/pages/Home/Home.scss
@@ -2,9 +2,9 @@
     display: flex;
     justify-content: center;
     // padding:55px;
-    height: 90vh;
-    background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/Home.jpg');
-    background-repeat: no-repeat repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    height: 100vh;
+    // background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/Home.jpg');
+    // background-repeat: no-repeat repeat;
+    // background-size: cover;
+    // background-attachment: fixed;
     }
