--- a/pigue.ui/src/components/pages/AddPlayerForm/AddPlayerForm.scss
+++ b/pigue.ui/src/components/pages/AddPlayerForm/AddPlayerForm.scss
@@ -2,10 +2,39 @@
     width: 200px;
     height: 200px;
     margin-left: 40px;
-    border-radius: 5px;
+    border-radius: 25px;
   
   }
   
   .uploadFileArea {
     margin-left: 40px;
+    color: red;
   }
+
+  .PlayerForm{
+    display: flex;
+    justify-content: center;
+    padding:65px;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+justify-content: center;
+// padding:65px;
+height: 105vh;
+background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/648f10ecf0160727277ac83e3c40826f.jpg');
+background-repeat: no-repeat repeat;
+background-size: cover;
+background-attachment: fixed;
+}
+
+label, name{
+color: red;
+}
+ 
+.FN{
+  color: black;
+}
+
+#FirstName, #LastName{
+  text-align: center;
+}
