--- a/pigue.ui/src/components/pages/AddPlayerForm/AddPlayerForm.scss
+++ b/pigue.ui/src/components/pages/AddPlayerForm/AddPlayerForm.scss
@@ -2,13 +2,14 @@
     width: 200px;
     height: 200px;
     margin-left: 40px;
-    border-radius: 25px;
-  
+    border-radius: 97px;
+    border: solid thick white;
   }
   
   .uploadFileArea {
     margin-left: 40px;
     color: red;
+    border-radius: 50px;
   }
 
   .PlayerForm{
@@ -18,16 +19,16 @@
     height: 100vh;
     text-align: center;
     display: flex;
-justify-content: center;
-// padding:65px;
-height: 105vh;
-background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/648f10ecf0160727277ac83e3c40826f.jpg');
-background-repeat: no-repeat repeat;
-background-size: cover;
-background-attachment: fixed;
+    justify-content: center;
+    // padding:65px;
+    height: 105vh;
+    background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/648f10ecf0160727277ac83e3c40826f.jpg');
+    background-repeat: no-repeat repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-label, name{
+label{
 color: red;
 }
  
