--- a/pigue.ui/src/components/pages/Huddle/Huddle.scss
+++ b/pigue.ui/src/components/pages/Huddle/Huddle.scss
@@ -16,8 +16,10 @@ margin: 10px;
 
 
 .btn-primary, .btn-success, .btn-secondary{ 
-    color:#0011ff;
-    background-color:#ee830a;
+    // color:#0011ff;
+    // background-color:#ee830a;
+    background-color: black;
+    color:white;
 }
 
 .gametime{
