--- a/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
+++ b/pigue.ui/src/components/pages/SinglePlayView/SinglePlayView.scss
@@ -5,36 +5,12 @@
   flex-wrap: wrap;
   margin: 25px;
   }
-  
-  .play1{
-    text-align: center;
-    margin:25px;
-  }
-
-  
-  // .btn{
-  //   align-items: center;
-  // }
-
-  .spinner-border{
-    background-color:#ee830a;
-  }
 
   .SinglePlayView{
     text-align:center;
   }
 
-  // .single{
-  //   justify-content: center;
-  // // }
-
-  // .PlayBackGround{
-  //   background-color: #0011ff;
-  //   width: 25%;
-  //   margin: 5px;
-  //   opacity: 85%;
-  //   border-radius: 25px;
-  //   align-content: center;
-  
-
-  // }
+  .PlayBackGround{
+    background-color: BLACK;
+    color: white;
+  }
