--- a/pigue.ui/src/components/shared/Timer/Timer.scss
+++ b/pigue.ui/src/components/shared/Timer/Timer.scss
@@ -1,22 +1,20 @@
 .playclock{
-    // background-color: #0011ff;
-    background-color: #ee830a;
     height: 100px;
-    color:#0011ff;
-    // color:#ee830a;
-    // border: solid thick;
-    border-radius: 20px;
+    background-color: black;
+    color:white;
+   
     width: 250px;
     margin: 5px;
+    font-family: Geostar Fill;
+    
 }
 
 .penalty{
     background-color: black;
-    color: white;
+    color: red;
 }
 
 .Timer{
-    margin: 25px;
     display: flex;
     justify-content: center;
 }
