--- a/pigue.ui/src/components/shared/Timer/Timer.scss
+++ b/pigue.ui/src/components/shared/Timer/Timer.scss
@@ -1,12 +1,11 @@
 .playclock{
-    height: 100px;
+    height: 110px;
     background-color: black;
     color:white;
-   
+    // border: solid white thick;
     width: 250px;
     margin: 5px;
-    font-family: Geostar Fill;
-    
+    font-family: 'Tomorrow', sans-serif;
 }
 
 .penalty{
