--- a/pigue.ui/src/components/pages/Formation/Formation.scss
+++ b/pigue.ui/src/components/pages/Formation/Formation.scss
@@ -1,9 +1,12 @@
 .Formation {
-    // display:flex;
-    // flex-direction: row;
-    // flex-wrap: wrap;
-    // justify-content: center;
-    // background-color: lightgray;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-image: url('https://reactnativestarter-hosting-mobilehub-132039435.s3.amazonaws.com/Main_Background.jpg');
+    background-repeat: no-repeat repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .daFormations {
@@ -12,13 +15,17 @@
     justify-content: center;
     flex-wrap: wrap;
     margin: 25px;
-    background-color: BLACK;
+
     color: white;
 }
 
 .add-formation {
     display: flex;
     justify-content: center;
-    background-color: BLACK;
+
     color: white;
+}
+
+.formz{
+
 }
